tests/specs/ecosystem/developer3/safe_keys/0_1_3.test
developer3/safe-keys/0.1.3
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2503 [ERROR]: Cannot find namespace 'KeyLocker'.
export class DOMKeyLocker implements KeyLocker.ClassInterface {
                                     ~~~~~~~~~
    at file://<tmpdir>/dom.ts:1:38

TS2503 [ERROR]: Cannot find namespace 'KeyLocker'.
  declare public readonly config: KeyLocker.DOMConfig;
                                  ~~~~~~~~~
    at file://<tmpdir>/dom.ts:2:35

TS2503 [ERROR]: Cannot find namespace 'KeyLocker'.
  constructor(config: KeyLocker.DOMConfig){}
                      ~~~~~~~~~
    at file://<tmpdir>/dom.ts:3:23

TS2503 [ERROR]: Cannot find namespace 'KeyLocker'.
  public getDomApis(): KeyLocker.DOMApis | undefined {
                       ~~~~~~~~~
    at file://<tmpdir>/dom.ts:4:24

TS2304 [ERROR]: Cannot find name 'IDBFactory'.
  public callDB(indexedDB: IDBFactory, call: (store: IDBObjectStore) => Promise<any>): Promise<true> {
                           ~~~~~~~~~~
    at file://<tmpdir>/dom.ts:13:28

TS2304 [ERROR]: Cannot find name 'IDBObjectStore'.
  public callDB(indexedDB: IDBFactory, call: (store: IDBObjectStore) => Promise<any>): Promise<true> {
                                                     ~~~~~~~~~~~~~~
    at file://<tmpdir>/dom.ts:13:54

TS2503 [ERROR]: Cannot find namespace 'KeyLocker'.
  public getOrCreateKey(apis: KeyLocker.DOMApis, keyName: string): Promise<CryptoKeyPair> {
                              ~~~~~~~~~
    at file://<tmpdir>/dom.ts:16:31

TS2503 [ERROR]: Cannot find namespace 'KeyLocker'.
  public tryReadJson(value: string): Promise<Partial<KeyLocker.DOMEncryptReturn>> {
                                                     ~~~~~~~~~
    at file://<tmpdir>/dom.ts:22:54

Found 8 errors.

error: Type checking failed.

